# exar-db

./: Cargo.toml  LICENSE  README.md  TODO.md  index.html  search-index.js  test-all  test-all.sh
antidote/: struct.WaitTimeoutResult.html
clap/: enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.Shell.html  macro._clap_count_exprs!.html  macro.arg_enum!.html  macro.crate_authors!.html  macro.crate_version!.html  macro.value_t!.html  macro.value_t_or_exit!.html  macro.values_t!.html  macro.values_t_or_exit!.html  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html  type.Result.html
exar/: enum.DatabaseError.html  enum.EventStreamError.html  enum.EventStreamMessage.html  enum.ParseError.html  enum.RoutingStrategy.html  enum.ScannerAction.html  index.html  macro.tab_separated!.html  sidebar-items.js  struct.Collection.html  struct.CollectionConfig.html  struct.Connection.html  struct.Database.html  struct.DatabaseConfig.html  struct.Event.html  struct.EventStream.html  struct.Interval.html  struct.Log.html  struct.Logger.html  struct.PartialCollectionConfig.html  struct.PartialScannersConfig.html  struct.Query.html  struct.Scanner.html  struct.ScannerThread.html  struct.ScannersConfig.html  struct.Subscription.html  struct.TabSeparatedParser.html  struct.ValidationError.html  trait.FromTabSeparatedStr.html  trait.Merge.html  trait.ToTabSeparatedString.html  trait.Validation.html  trait.WriteLine.html
exar-client/: Cargo.toml  README.md
exar-client/src/: lib.rs  testkit.rs
exar-core/: Cargo.toml  README.md
exar-core/benches/: database.rs
exar-core/src/: appender.rs  buf_writer.rs  collection.rs  config.rs  connection.rs  database.rs  encoding.rs  error.rs  event.rs  lib.rs  line_reader.rs  log.rs  logger.rs  messaging.rs  parser.rs  publisher.rs  query.rs  routing_strategy.rs  scanner.rs  subscription.rs  testkit.rs  thread.rs  util.rs  validation.rs  writer.rs
exar-core/tests/: connection.rs  database.rs  lib.rs  testkit.rs
exar-db/: Cargo.toml  README.md  config.toml  log4rs.toml
exar-db/src/: config.rs  main.rs  testkit.rs  util.rs
exar-net/: Cargo.toml  README.md
exar-net/src/: buf_writer.rs  lib.rs  message.rs  protocol.rs  stream.rs  testkit.rs
exar-server/: Cargo.toml  README.md
exar-server/src/: config.rs  connection.rs  credentials.rs  handler.rs  lib.rs  server.rs  testkit.rs
exar-testkit/: Cargo.toml
exar-testkit/src/: collections.rs  data.rs  encoding.rs  lib.rs  net.rs
exar-ui/: .gitignore  README.md  build.sh  config.js  index.html  index.js  karma.conf.js  package-lock.json  package.json  tsconfig.json  tsd.json  typings.json
exar-ui/custom_typings/: rx.lite.d.ts  tcp-socket.d.ts  text-encoding.d.ts
exar-ui/src/: app.html  app.ts  main.ts
exar-ui/styles/: gentelella.css  styles.css
exar-ui/typings/: es6.d.ts  index.d.ts  tcp-socket.d.ts  tsd.d.ts
exar/collection/: struct.Collection.html
exar/config/: struct.CollectionConfig.html  struct.DatabaseConfig.html  struct.PartialCollectionConfig.html  struct.PartialScannersConfig.html  struct.ScannersConfig.html
exar/connection/: struct.Connection.html
exar/database/: struct.Database.html
exar/encoding/: enum.ParseError.html  struct.TabSeparatedParser.html  trait.FromTabSeparatedStr.html  trait.ToTabSeparatedString.html
exar/error/: enum.DatabaseError.html
exar/event/: enum.EventStreamError.html  enum.EventStreamMessage.html  struct.Event.html  struct.EventStream.html
exar/log/: struct.Log.html
exar/logger/: struct.Logger.html
exar/query/: struct.Query.html
exar/routing_strategy/: enum.RoutingStrategy.html
exar/scanner/: enum.ScannerAction.html  struct.Scanner.html  struct.ScannerThread.html
exar/subscription/: struct.Subscription.html
exar/util/: struct.Interval.html  trait.Merge.html  trait.WriteLine.html
exar/validation/: struct.ValidationError.html  trait.Validation.html
exar_client/: index.html  sidebar-items.js  struct.Client.html
exar_db/: index.html
exar_net/: enum.TcpMessage.html  index.html  sidebar-items.js  struct.TcpMessageStream.html  struct.TcpMessages.html  trait.TryClone.html
exar_net/message/: enum.TcpMessage.html
exar_net/stream/: trait.TryClone.html  (+2 more)
exar_server/: enum.ActionResult.html  enum.State.html  index.html  sidebar-items.js  struct.Credentials.html  struct.Handler.html  struct.Server.html  struct.ServerConfig.html
indexed_line_reader/: index.html  sidebar-items.js  struct.IndexedLineReader.html  struct.LinesIndex.html
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNIX.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CLOCAL.html  constant.CODESET.html  constant.CR0.html  constant.CR1.html  constant.CR2.html  constant.CR3.html  constant.CREAD.html  constant.CRNCYSTR.html  constant.CRTSCTS.html  constant.CS5.html  constant.CS6.html  constant.CS7.html  (+1163 more)
num/: fn.checked_pow.html  trait.FromPrimitive.html  trait.Num.html  trait.NumCast.html  trait.PrimInt.html  trait.ToPrimitive.html
num_traits/: enum.FloatErrorKind.html  struct.ParseFloatError.html  trait.Num.html
term_size/: fn.ioctl.html
toml/: enum.DecodeErrorKind.html  enum.Error.html  enum.Value.html  fn.decode.html  fn.decode_str.html  fn.encode.html  fn.encode_str.html  struct.DecodeError.html  struct.Decoder.html  struct.Encoder.html  struct.Parser.html  struct.ParserError.html  type.Array.html  type.Table.html
toml_config/: index.html  sidebar-items.js  struct.ConfigFactory.html
(+440 files in other folders)
