[package]
name = "exar-client"
version = "0.1.0"
authors = ["Bruno Filippone <bruno.filippone@b-fil.com>"]

[dependencies]
exar = { version = "0.1", path = "../exar-core" }
exar-net = { version = "0.1", path = "../exar-net" }
log = "0.3"

[dev-dependencies]
exar-testkit = { version = "0.1", path = "../exar-testkit" }
