[package]
name = "exar-client"
version = "0.1.0"
authors = ["Bruno Filippone <bruno.filippone@b-fil.com>"]
description = "Exar DB's TCP client"
keywords = ["exar", "exar-db", "tcp", "client"]
repository = "https://github.com/bfil/exar-db/tree/master/exar-client"
documentation = "https://bfil.github.io/exar-db/exar_client/index.html"
license = "AGPL-3.0"
readme = "README.md"

[dependencies]
exar = { version = "0.1", path = "../exar-core" }
exar-net = { version = "0.1", path = "../exar-net" }
log = "0.3"

[dev-dependencies]
exar-testkit = { version = "0.1", path = "../exar-testkit" }
