[package]
name = "exar"
version = "0.1.0"
authors = ["Bruno Filippone <bruno.filippone@b-fil.com>"]
description = "Exar DB's core event store engine with streaming support"
keywords = ["exar", "exar-db", "event", "store", "database"]
repository = "https://github.com/bfil/exar-db/tree/master/exar-core"
documentation = "https://bfil.github.io/exar-db/exar/index.html"
license = "AGPL-3.0"
readme = "README.md"

[dependencies]
indexed-line-reader = "0.2"
log = "0.3"
rand = "0.3"
time = "0.1"
rustc-serialize = { optional = true, version = "0.3" }
serde = { optional = true, version = "0.9" }
serde_derive = { optional = true, version = "0.9" }

[features]
rustc-serialization = ["rustc-serialize"]
serde-serialization = ["serde", "serde_derive"]

[dev-dependencies]
exar-testkit = { version = "0.1", path = "../exar-testkit" }
serde_json = "0.9"
