[package]
name = "exar-db"
version = "0.1.0"
authors = ["Bruno Filippone <bruno.filippone@b-fil.com>"]
description = "Exar DB's event store with streaming support"
keywords = ["exar", "exar-db", "event", "store", "database"]
repository = "https://github.com/bfil/exar-db/tree/master/exar-db"
documentation = "https://bfil.github.io/exar-db/exar_db/index.html"
license = "AGPL-3.0"
readme = "README.md"

[dependencies]
clap = "2.1"
exar = { version = "0.1", path = "../exar-core" }
exar-server = { version = "0.1", path = "../exar-server" }
log = "0.3"
log4rs = { version = "0.6", features = ["toml_format"] }
serde = "1.0"
serde_derive = "1.0"
signal-hook = "0.1"
tempfile = "3.0"
toml = "0.4"
