[package]
name = "exar-server"
version = "0.1.0"
authors = ["Bruno Filippone <bruno.filippone@b-fil.com>"]
description = "Exar DB's TCP server"
keywords = ["exar", "exar-db", "tcp", "server"]
repository = "https://github.com/bfil/exar-db/tree/master/exar-server"
documentation = "https://bfil.github.io/exar-db/exar_server/index.html"
license = "AGPL-3.0"
readme = "README.md"

[dependencies]
exar = { version = "0.1", path = "../exar-core" }
exar-net = { version = "0.1", path = "../exar-net" }
log = "0.3"
rustc-serialize = { optional = true, version = "0.3" }
serde = { optional = true, version = "0.9" }
serde_derive = { optional = true, version = "0.9" }

[features]
rustc-serialization = ["rustc-serialize"]
serde-serialization = ["serde", "serde_derive"]

[dev-dependencies]
exar-testkit = { version = "0.1", path = "../exar-testkit" }
